# 42186-Model-Based-Project

./: README.md  pyproject.toml
data/: Defender.csv  Forward.csv  Goalkeeper.csv  Midfielder.csv  defender_correlations.csv  epl_player_stats.csv
src/Dataset/: premier_league.csv
src/data_utils/: Dataset.ipynb  __init__.py  correlation.py  load_dataset.py  make_subdataset.py  midfield_analysis.py  midfield_pre.py
src/data_utils/defender/: defender_correlation.py
src/models/: attacker_model_basic.py  attacker_model_fun.py  defender_model.py  goalkeeper_model.py  midfield_model.py  parameter_recovery.py  test_recovery.py
