[project]
name = "42186-model-based-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.2",
    "pyro-ppl>=1.9.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
]
